exports[`Image renders with defaultProps 1`] = `
<img
  className="ax-image"
  onError={[Function]}
  src="/image.png" />
`;

exports[`Image renders with extra props 1`] = `
<img
  alt="Lorem"
  className="ax-image"
  onError={[Function]}
  src="/image.png"
  title="Lorem" />
`;
